# achiel

./: .gitignore  CURSOR_PROMPT_germany_only.md  CURSOR_PROMPT_moderation.md  Makefile  README.md  docker-compose.yml  railway.env.example
backend/: .env.example  README.md  alembic.ini  allowed_domains.example.json  allowed_domains.json  main.py  name_watchlist.json  pyproject.toml  railway.toml  severe_terms.txt  severe_terms_de.txt  universities.json
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_initial_schema.py  a7b8c9d0e1f2_reports_table.py  b2c3d4e5f6a7_add_jobs_topic.py  c3d4e5f6a7b8_phase3_jobs_sentiment_votes_comments.py  d4e5f6a7b8c9_user_university_fields.py  e5f6a7b8c9d0_user_is_admin.py  f6a7b8c9d0e1_content_hidden_flags.py  g7h8i9j0k1l2_domain_validation_tables.py  i9j0k1l2m3n4_allowed_domain_source_manual.py  j0k1l2m3n4o5_add_email_confirmed_at_to_users.py  k1l2m3n4o5p6_german_universities_catalogue.py
backend/app/: __init__.py
backend/app/api/: __init__.py  _comment_helpers.py  _post_helpers.py  admin_domains.py  auth.py  comments.py  posts.py  reports.py  universities.py
backend/app/core/: _security_base.py  config.py  db.py  redis_client.py  security.py
backend/app/middleware/: __init__.py  profanity.py
backend/app/models/: __init__.py  base.py  content.py  domain.py  report.py  (+2 more)
backend/scripts/: seed_allowed_domains.py
backend/tests/: conftest.py  test_admin_domains.py  test_auth_flows.py  test_german_private_unis.py  test_moderation.py  test_password_security.py  test_universities_search.py  test_university_email.py
(+76 files in other folders)
