[project]
name = "campusvoice-backend"
version = "0.1.0"
description = "CampusVoice API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis[hiredis]>=5.2.0",
    "better-profanity>=0.7.0",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.17",
    "slowapi>=0.1.9",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.uv]
package = false
